src/tests/testfiles/unary-operators/types-11.txt
Error at 2:2: lvalue required as decrement operand
--'a';
^
